...
    <string name="addon_ui_authorization_stopped_while_the_app_was_in_the_background_start_ag">Authorization stopped while the app was in the background. Start again to get a new QR code.</string>
    <string name="addon_ui_authorize_on_your_phone_then_review_your_addon_list_here">Authorize on your phone, then review your addon list here.</string>
    <string name="addon_ui_auto">Auto</string>
    <string name="addon_ui_available_subtitles">Available subtitles</string>
    <string name="addon_ui_back_to_catalogs">Back to catalogs</string>
    <string name="addon_ui_back_to_import">Back to import</string>
    <string name="addon_ui_back_to_player">Back to player</string>
    <string name="addon_ui_back_to_subtitles">Back to subtitles</string>
    <string name="addon_ui_browse">Browse</string>
    <string name="addon_ui_cancel_move">Cancel move</string>
    <string name="addon_ui_catalog">Catalog</string>
    <string name="addon_ui_catalog_settings">Catalog settings</string>
    <string name="addon_ui_catalogs">Catalogs</string>
...
